--- a/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
@@ -1,14 +1,12 @@
-<div class="bg-white max-w-sm w-full mx-auto shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8">
-  <div class="flex items-center justify-between">
-    <h2>Success!</h2>
-  </div>
+<div class="bg-white max-w-md w-full mx-auto shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8">
+  <h2 class="text-xl font-black">Success!</h2>
   <div class="my-4 leading-tight">
     We have sent an email with password reset instructions to <b><%= @email %></b> if it exists in our database.
   </div>
   <div class="mt-8 text-sm">
     Didn't recieve an email?
   </div>
-  <div class="mt-2 text-sm text-grey-dark leading-tight">
+  <div class="mt-2 text-sm text-gray-600 leading-tight">
     Please check your spam folder and contact <a href="mailto:uku@plausible.io">uku@plausible.io</a> if the problem persists
   </div>
 </div>
