--- a/lib/plausible_web/templates/page/contact_form.html.eex
+++ b/lib/plausible_web/templates/page/contact_form.html.eex
@@ -1,14 +1,14 @@
-<div class="w-full max-w-sm mx-auto mt-8">
+<div class="w-full max-w-md mx-auto mt-8">
   <%= form_for @conn, "/contact", [class: "bg-white shadow-md rounded px-8 py-6 mb-4 mt-16"], fn f -> %>
-    <h2>Contact us</h2>
-    <p class="text-grey-dark mt-2">Please get in touch with any questions and thoughts, we'll get back to you as soon as possible!</p>
-    <%= textarea f, :text, rows: 4, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light text-xs mt-4" %>
+    <h2 class="text-xl font-black">Contact us</h2>
+    <p class="text-gray-600 mt-2">Please get in touch with any questions and thoughts, we'll get back to you as soon as possible!</p>
+    <%= textarea f, :text, rows: 4, class: "transition bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300 text-xs mt-4" %>
     <%= if @conn.assigns[:current_user] do %>
       <%= hidden_input f, :email, value: @conn.assigns[:current_user].email %>
     <% else %>
       <div class="my-4">
-        <%= label f, :email, "Your email (optional)", class: "block text-grey-darker text-sm font-bold mb-2" %>
-        <%= email_input f, :email, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light", placeholder: "example@email.com" %>
+        <%= label f, :email, "Your email (optional)", class: "block text-gray-700 text-sm font-bold mb-2" %>
+        <%= email_input f, :email, class: "transition bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300", placeholder: "example@email.com" %>
       </div>
     <% end %>
     <%= submit "Send", class: "button mt-4 w-full" %>
