--- a/lib/plausible_web/templates/stats/waiting_first_pageview.html.eex
+++ b/lib/plausible_web/templates/stats/waiting_first_pageview.html.eex
@@ -14,12 +14,12 @@
 </script>
 
 <div class="w-full max-w-sm mx-auto mt-8">
-  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-16 h-72 relative text-center">
-    <h2>Waiting for first pageview</h2>
-    <h2>on <%= @site.domain %></h2>
-    <div class="my-4">
-      <div class="pulsating-circle"></div>
-      <p class="text-grey-dark text-sm absolute pin-l pin-b mb-6 w-full text-center leading-normal">
+  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-16 relative text-center">
+    <h2 class="text-xl font-bold">Waiting for first pageview</h2>
+    <h2 class="text-xl font-bold">on <%= @site.domain %></h2>
+    <div class="my-44">
+      <div class="block pulsating-circle"></div>
+      <p class="text-gray-600 text-sm absolute left-0 bottom-0 mb-6 w-full text-center leading-normal">
         Need to see the snippet again? <%= link("Click here", to: "/#{URI.encode_www_form(@site.domain)}/snippet")%><br />
         Not working? Contact <a href="mailto:uku@plausible.io">uku@plausible.io</a> to get set up
       </p>
