--- a/lib/plausible_web/templates/auth/password_form.html.eex
+++ b/lib/plausible_web/templates/auth/password_form.html.eex
@@ -1,14 +1,14 @@
-<%= form_for @conn, "/password", [class: "bg-white max-w-sm w-full mx-auto shadow-md rounded px-8 py-6 mt-8"], fn f -> %>
-  <h2>Set your password</h2>
-  <p class="text-grey-dark text-sm mt-1 mb-2">Min 6 characters</p>
+<%= form_for @conn, "/password", [class: "bg-white max-w-md w-full mx-auto shadow-md rounded px-8 py-6 mt-8"], fn f -> %>
+  <h2 class="text-xl font-black">Set your password</h2>
   <div class="my-4">
-    <%= password_input f, :password, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light" %>
+    <p class="text-gray-600 text-sm mt-1 mb-2">Min 6 characters</p>
+    <%= password_input f, :password, class: "transition bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300" %>
     <%= if @conn.assigns[:changeset] do %>
       <%= error_tag @changeset, :password %>
     <% end %>
   </div>
   <%= submit "Set password →", class: "button mt-4 w-full" %>
-  <p class="text-center text-grey-dark text-xs mt-4">
+  <p class="text-center text-gray-600 text-xs mt-4">
     Don't have an account? <%= link("Register", to: "/register") %> instead.
   </p>
 <% end %>
