--- a/lib/plausible_web/templates/auth/password_reset_request_form.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_form.html.eex
@@ -1,11 +1,11 @@
-<%= form_for @conn, "/password/request-reset", [class: "max-w-sm w-full mx-auto bg-white shadow-md rounded px-8 py-6 mt-8"], fn f -> %>
-  <h2>Reset your password</h2>
+<%= form_for @conn, "/password/request-reset", [class: "max-w-md w-full mx-auto bg-white shadow-md rounded px-8 py-6 mt-8"], fn f -> %>
+  <h2 class="text-xl font-black">Reset your password</h2>
   <div class="mt-4">Enter your email so we can send a password reset link</div>
   <div class="my-4 mt-8">
-    <%= email_input f, :email, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light", placeholder: "user@example.com" %>
+    <%= email_input f, :email, class: "transition bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300", placeholder: "user@example.com" %>
   </div>
   <%= if @conn.assigns[:error] do %>
-    <div class="text-red text-xs italic my-2"><%= @conn.assigns[:error] %></div>
+    <div class="text-red-500 text-xs italic my-2"><%= @conn.assigns[:error] %></div>
   <% end %>
   <%= submit "Send reset link →", class: "button mt-4 w-full" %>
 <% end %>
