--- a/lib/plausible_web/templates/page/contact_thanks.html.eex
+++ b/lib/plausible_web/templates/page/contact_thanks.html.eex
@@ -1,6 +1,4 @@
-<div class="max-w-sm mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-16">
-  <div class="flex items-center justify-between">
-    <h2>Message submitted!</h2>
-  </div>
+<div class="max-w-md mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-16">
+  <h2 class="text-xl font-black">Message submitted!</h2>
   <div class="my-4">Thank you for getting in touch.</div>
 </div>
