--- a/lib/plausible_web/templates/site/new_shared_link.html.eex
+++ b/lib/plausible_web/templates/site/new_shared_link.html.eex
@@ -1,12 +1,12 @@
-<%= form_for @changeset, "/sites/#{URI.encode_www_form(@site.domain)}/shared-links", [class: "max-w-sm w-full mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
-  <h2>New shared link</h2>
-  <div class="my-6">
+<%= form_for @changeset, "/sites/#{URI.encode_www_form(@site.domain)}/shared-links", [class: "max-w-md w-full mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
+  <h2 class="text-xl font-black">New shared link</h2>
+  <div class="my-4">
     Add a password or leave it blank so anyone with the link can see the stats.
     Once the link is created, we cannot reveal the password. Please make sure you save it in a secure place.
   </div>
   <div class="my-6">
     <%= label f, :password, "Password (optional)", class: "block text-sm font-bold" %>
-    <%= password_input f, :password, class: "transition mt-3 bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light" %>
+    <%= password_input f, :password, class: "transition mt-3 bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300" %>
     <%= error_tag f, :password %>
   </div>
 
