--- a/lib/plausible_web/templates/stats/shared_link_password.html.eex
+++ b/lib/plausible_web/templates/stats/shared_link_password.html.eex
@@ -1,15 +1,15 @@
-<%= form_for @conn, "/share/#{@link.slug}/authenticate", [class: "max-w-sm w-full mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
-  <h2>Enter password</h2>
-  <div class="my-6">
+<%= form_for @conn, "/share/#{@link.slug}/authenticate", [class: "max-w-md w-full mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
+  <h2 class="text-xl font-black">Enter password</h2>
+  <div class="my-4">
     This link is password-protected. Please enter the password to continue to the dashboard.
   </div>
 
   <div class="my-6">
     <%= label f, :password, "Password", class: "block text-sm font-bold" %>
-    <%= password_input f, :password, class: "transition mt-3 bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:bg-white focus:border-grey-light" %>
+    <%= password_input f, :password, class: "transition mt-3 bg-gray-200 appearance-none border border-transparent rounded w-full p-2 text-gray-700 leading-normal appearance-none focus:outline-none focus:bg-white focus:border-gray-300" %>
 
     <%= if @conn.assigns[:error] do %>
-      <div class="text-red text-xs italic mt-4"><%= @conn.assigns[:error] %></div>
+      <div class="text-red-500 text-xs italic mt-4"><%= @conn.assigns[:error] %></div>
     <% end %>
   </div>
 
